GearsetPOC/force-app/main/default/objects/SocialPost/fields/Followed_By_Us__c.field-meta.xml
<CustomField>
    <fullName>Followed_By_Us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followed By Us</label>
    <type>Checkbox</type>
</CustomField>