GearsetPOC/force-app/main/default/objects/SocialPost/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <formula>Social_Persona__r.Followers</formula>
    <label>Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>