GearsetPOC/force-app/main/default/objects/SocialPost/fields/Following_Us__c.field-meta.xml
<CustomField>
    <fullName>Following_Us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Following Us</label>
    <type>Checkbox</type>
</CustomField>