GearsetPOC/force-app/main/default/objects/SocialPost/fields/Inbound_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Contact__c</fullName>
    <formula>(NOT(Handle = &quot;Eurostar&quot;)
||
NOT(Handle = &quot;EurostarUK&quot;)
||
NOT(Handle = &quot;eurostarfr&quot;))
&amp;&amp;
(NOT(
CONTAINS(Name,  &quot;from: Eurostar&quot;)
||
CONTAINS(Name,  &quot;From: Eurostar&quot;)
||
CONTAINS(Name,  &quot;from EurostarUK&quot;)
||
CONTAINS(Name,  &quot;from Eurostar&quot;)
||
CONTAINS (Name, &quot;FROM: Eurostar&quot;)
||
CONTAINS (Name, &quot;from eurostarfr&quot;)))</formula>
    <label>Inbound Contact</label>
    <type>Checkbox</type>
</CustomField>