GearsetPOC/force-app/main/default/objects/SocialPost/fields/Initiated_Time_of_Day_for_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Time_of_Day_for_Created_Date__c</fullName>
    <formula>VALUE(MID(TEXT(CreatedDate), 12,2))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiated Time of Day for Created Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>