GearsetPOC/force-app/main/default/objects/SocialPost/fields/Link_Shortner__c.field-meta.xml
<CustomField>
    <fullName>Link_Shortner__c</fullName>
    <defaultValue>&quot;https://bitly.com/&quot;</defaultValue>
    <label>Link Shortner</label>
    <type>Url</type>
</CustomField>