GearsetPOC/force-app/main/default/objects/SocialPost/fields/Opened_Time__c.field-meta.xml
<CustomField>
    <fullName>Opened_Time__c</fullName>
    <formula>VALUE(MID((TEXT(CreatedDate )),12,2))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>