GearsetPOC/force-app/main/default/objects/SocialPost/fields/Post_Was_Answered_The_Following_Day__c.field-meta.xml
<CustomField>
    <fullName>Post_Was_Answered_The_Following_Day__c</fullName>
    <formula>DateValue(CreatedDate) = (DateValue(HarvestDate) +1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Was Answered The Following Day</label>
    <type>Checkbox</type>
</CustomField>