GearsetPOC/force-app/main/default/objects/SocialPost/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <formula>Social_Persona__r.Profile_Picture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture</label>
    <type>Text</type>
</CustomField>