GearsetPOC/force-app/main/default/objects/SocialPost/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <formula>HYPERLINK(Social_Persona__r.ExternalPictureURL,&quot;Picture&quot; , IMAGE(Social_Persona__r.ExternalPictureURL, &quot;Pic&quot; ,100, 100)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture URL</label>
    <type>Text</type>
</CustomField>