GearsetPOC/force-app/main/default/objects/SocialPost/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERAL - No Reply Needed</fullName>
            </value>
            <value>
                <fullName>GENERAL - Enthusiasm</fullName>
            </value>
            <value>
                <fullName>--</fullName>
            </value>
            <value>
                <fullName>QUESTION - SNAP</fullName>
            </value>
            <value>
                <fullName>QUESTION - Ticket Conditions</fullName>
            </value>
            <value>
                <fullName>QUESTION - Current Disruption</fullName>
            </value>
            <value>
                <fullName>QUESTION - Timetable &amp; Availability</fullName>
            </value>
            <value>
                <fullName>QUESTION - Luggage</fullName>
            </value>
            <value>
                <fullName>QUESTION - Connections</fullName>
            </value>
            <value>
                <fullName>QUESTION - General</fullName>
            </value>
            <value>
                <fullName>QUESTION - Ticket Collection</fullName>
            </value>
            <value>
                <fullName>QUESTION - Seating</fullName>
            </value>
            <value>
                <fullName>QUESTION - Booking Horizon</fullName>
            </value>
            <value>
                <fullName>QUESTION - Loyalty or Online Account Related</fullName>
            </value>
            <value>
                <fullName>---</fullName>
            </value>
            <value>
                <fullName>REQUEST - Letter or Confirmation</fullName>
            </value>
            <value>
                <fullName>REQUEST - Override Ticket Conditions</fullName>
            </value>
            <value>
                <fullName>----</fullName>
            </value>
            <value>
                <fullName>ISSUE - Customer Booked Wrong Dates or Times</fullName>
            </value>
            <value>
                <fullName>ISSUE - Spelling Error on Booking</fullName>
            </value>
            <value>
                <fullName>ISSUE - Website Related</fullName>
            </value>
            <value>
                <fullName>-----</fullName>
            </value>
            <value>
                <fullName>FEEDBACK - Check-In</fullName>
            </value>
            <value>
                <fullName>FEEDBACK - Failed Payment Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>