GearsetPOC/force-app/main/default/objects/SocialPost/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason Code</label>
    <referenceTo>Reason_Code__c</referenceTo>
    <relationshipLabel>Social Posts</relationshipLabel>
    <relationshipName>Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>