GearsetPOC/force-app/main/default/objects/SocialPost/fields/Status_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Case__c</fullName>
    <label>Status of Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>