GearsetPOC/force-app/main/default/objects/SocialPost/fields/Type_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contact__c</fullName>
    <formula>IF(Outbound_Contact__c  = TRUE,&quot;Outbound Contact&quot;,&quot;Inbound Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Contact</label>
    <type>Text</type>
</CustomField>