GearsetPOC/force-app/main/default/objects/SocialPost/listViews/AllSocialPosts.listView-meta.xml
<ListView>
    <fullName>AllSocialPosts</fullName>
    <columns>Name</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Parent</columns>
    <columns>ReviewedStatus</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All social posts</label>
    <language>en_US</language>
</ListView>