GearsetPOC/force-app/main/default/objects/SocialPost/listViews/Social_posts_without_case.listView-meta.xml
<ListView>
    <fullName>Social_posts_without_case</fullName>
    <columns>Name</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>ReviewedStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReviewedStatus</field>
        <operation>equals</operation>
        <value>Needed</value>
    </filters>
    <label>Social posts without case</label>
</ListView>